--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,28 +12,89 @@ body {
   h6 {
     font-family: 'Lora', serif;
   }
+  
+  .uppercase {
+    text-transform: uppercase;
+  }
+
+  .roboto {
+    font-family: 'Roboto';
+  }
+
+  .lora {
+    font-family: 'Lora';
+  }
+
+  .proxima_novaregular {
+    font-family: 'proxima_novaregular';
+  }
+
+  .moontimeregular {
+    font-family: 'moontimeregular';
+  }
+
+  .reform, .congress {
+    font-size: 5rem;
+    color: white;
+  }
+
+  .reform-congress {
+    font-style: italic;
+    font-weight: 600;
+  }
+
+  .with {
+    margin-right: 1rem;
+    font-size: 4rem;
+    color: white;
+  }
+
+  .liz {
+    font-size: 3rem;
+    color: white;
+  }
 
   .container {
     border: 6px solid rgb(255, 199, 44);
-    margin: 40px;
+    margin: 20px;
   }
   
   header {
-    background: rgb(0, 134, 205);
-    padding: 2rem 0 2rem 0;
-    width: 100%;
+    background: #0086cd;
+    padding: 1rem 0 1rem 0;
+  }
+
+  .waves {
+    /* width: 100%;
+    height: 1px;
+    top: 10px;
+    position: relative; */
   }
   
   .banner img {
     width: 300px;
   }
-  
-  h1.slogan div {
-    font-family: 'journalregular';
-    font-size: 4rem;
-    padding: 0;
-    font-weight: 500;
-    color: white;
+
+  .flex-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .main-summary {
+    font-size: 50px;
+    font-weight: initial;
+    font-style: normal;
+  }
+
+  .platform-points {
+    font-size: 40px;
+    font-style: italic;
+    font-weight: 600;
+  }
+
+  .platform-points li {
+    margin: 10px 0 10px;
   }
   
   main {
@@ -41,69 +102,9 @@ body {
     background: white;
   }
   
-  .hero {
-    max-width: 100%;
-    width: 100%;
-  }
-  
-  .links {
-    padding: 2rem;
-    text-align: center;
-  }
-  
-  .links>div {
-    margin-bottom: 4rem;
-  }
-  
-  a.link {
-    text-decoration: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-  
-  .link-text {
-    margin-top: 1rem;
-    width: 90px;
-  
-  }
-  
-  .fab {
-    color: white;
-    border-radius: 200px 200px 200px 200px;
-    background: #00b2d9;
-    border: 2px solid #e41e26;
-    width: 90px;
-    height: 90px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-  }
-  
-  .fab.white {
-    background: white;
-  }
-  
-  .fab > img {
-    width: 60px;
-  }
-  
   footer {
-    background: rgb(255, 199, 44);
-    padding: 2rem;
+    background: #ffc72c;
+    padding: 1rem;
     text-align: center;
     color: white;
-  }
-  
-  .grid {
-    display: grid;
-    grid-template-rows: 5fr 1fr;
-    height: 100vh;
-  }
-  
-  .flex {
-    display: flex;
-    justify-content: space-evenly;
   }
