--- a/public/css/main.css
+++ b/public/css/main.css
@@ -34,7 +34,7 @@ body {
   }
 
   .reform, .congress {
-    font-size: 5rem;
+    font-size: 8rem;
     color: white;
   }
 
@@ -58,19 +58,20 @@ body {
     border: 6px solid rgb(255, 199, 44);
     margin: 20px;
   }
+
+  .waves-container {
+    position: relative;
+  }
+
+  .waves-container img {
+    position: absolute;
+  }
   
   header {
     background: #0086cd;
-    padding: 1rem 0 1rem 0;
+    padding: 20px 0 20px 0;
   }
 
-  .waves {
-    /* width: 100%;
-    height: 1px;
-    top: 10px;
-    position: relative; */
-  }
-  
   .banner img {
     width: 300px;
   }
@@ -98,7 +99,7 @@ body {
   }
   
   main {
-    margin: 40px;
+    margin: 300px 40px 40px 40px;
     background: white;
   }
   
@@ -107,4 +108,32 @@ body {
     padding: 1rem;
     text-align: center;
     color: white;
+  }
+
+  .css-filter {
+    filter: drop-shadow(2px 0 0 antiquewhite) drop-shadow(-2px 0 0 antiquewhite) drop-shadow(0 2px 0 antiquewhite) drop-shadow(0 -2px 0 antiquewhite) drop-shadow(1px 0 0 red) drop-shadow(-1px 0 0 red) drop-shadow(0 -1px 0 red) drop-shadow(0 1px 0 red);
+  }
+
+  @media (max-width: 1024px) {
+    .reform, .congress {
+      font-size: 3rem;
+      color: white;
+    }
+
+    .reform-congress {
+      font-size: 2rem;
+    }
+
+    .main-summary {
+      font-size: 2rem;
+    }
+
+    .platform-points li {
+      font-size: 2rem;
+    }
+
+    .waves-container img {
+      position: absolute;
+      top: 10px;
+    }
   }
