--- a/public/css/main.css
+++ b/public/css/main.css
@@ -57,6 +57,7 @@ body {
   .container {
     border: 6px solid rgb(255, 199, 44);
     margin: 20px;
+    border-bottom: none;
   }
 
   .waves-container {
@@ -102,11 +103,20 @@ body {
     margin: 300px 40px 40px 40px;
     background: white;
   }
+
+  .pledge a {
+    font-size: 40px;
+    color: #0086cd;
+    background: transparent;
+  }
+  .pledge button {
+    background: transparent;
+    border: none;
+  }
   
   footer {
     background: #ffc72c;
-    padding: 1rem;
-    text-align: center;
+    padding: 0.5rem;
     color: white;
   }
 
