--- a/public/css/main.css
+++ b/public/css/main.css
@@ -84,6 +84,11 @@ body {
     justify-content: center;
   }
 
+  .wrap {
+    margin-top: 20px;
+    flex-direction: column;
+  }
+
   .main-summary {
     font-size: 50px;
     font-weight: initial;
