--- a/public/css/main.css
+++ b/public/css/main.css
@@ -106,7 +106,7 @@ body {
   }
   
   main {
-    margin: 300px 40px 40px 40px;
+    margin: 250px 40px 40px 40px;
     background: white;
   }
 
@@ -128,7 +128,7 @@ body {
 
   @media (max-width: 1024px) {
     main {
-      margin: 150px 40px 40px 40px;
+      margin: 170px 40px 40px 40px;
       background: white;
     }
 
@@ -142,6 +142,7 @@ body {
     }
 
     .main-summary {
+      text-align: center;
       font-size: 2rem;
     }
 
